BugFix: Avoid Overflow of author and book title on bookcard

--- a/style.css
+++ b/style.css
@@ -273,23 +273,25 @@ main .booksContainer {
   grid-template-columns: 90% 10%;
   grid-template-rows: 70% 30%;
   /* justify-content: center; */
-  max-width: 350px;
-  width: 50%;
   min-width: 250px;
-  max-height: 200px;
-  height: 200px;
+  width: 50%;
+  max-width: 350px;
+  max-height: 400px;
+  min-height: 200px;
   background-color: #b3bfb8;
   padding: 15px;
   justify-self: center;
   align-self: center;
   margin: 5px;
   border-radius: 10px;
+  row-gap: 10px;
 }
 
 .bookDetails {
   padding: 0;
   grid-row: 1;
   grid-column: 1;
+  word-break: break-word;
 }
 
 .bookDetails p {
